[package]
name = "get-size-derive"
description = "Derives the GetSize trait."
version = "0.2.0"
edition = "2021"
authors = ["Denis Kerp"]
readme = "README.md"
repository = "https://github.com/DKerp/get-size/tree/main/get-size-derive"
license = "MIT"
keywords = ["size", "heap", "ram", "cache", "memory"]
categories = ["memory-management", "caching"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2", features = ["derive", "parsing"] }
quote = "^1"
attribute-derive = "^0.10"

[dev-dependencies]
get-size = { path = "../", features = ["derive"] }
